test/TestPhases/parser/invalid/unicodeLineTerminators.blc

@[EntryPoint]
activity main()()
    await true  // next line (NEL)
    await true   // line separator (LS)
    await true   // paragraph separator (PS)
end


